--- a/javascrtipt/tabs/index.html
+++ b/javascrtipt/tabs/index.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vanilla JS Tabs</title>
-  <style>
-    /* Basic styling */
-    .tabs { display: flex; cursor: pointer; }
-    .tab { padding: 10px; border: 1px solid #ddd; }
-    .tab-content { display: none; padding: 10px; border: 1px solid #ddd; border-top: none; }
-    .active { background-color: #ddd; }
-    .show { display: block; }
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vanilla JS Tabs</title>
+    <style>
+      /* Basic styling */
+      .tabs {
+        display: flex;
+        cursor: pointer;
+      }
+      .tab {
+        padding: 10px;
+        border: 1px solid #ddd;
+      }
+      .tab-content {
+        display: none;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-top: none;
+      }
+      .active {
+        background-color: #ddd;
+      }
+      .show {
+        display: block;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="tabs">
+      <div class="tab" data-tab="1">Tab 1</div>
+      <div class="tab" data-tab="2">Tab 2</div>
+      <div class="tab" data-tab="3">Tab 3</div>
+    </div>
 
-<div class="tabs">
-  <div class="tab" data-tab="1">Tab 1</div>
-  <div class="tab" data-tab="2">Tab 2</div>
-  <div class="tab" data-tab="3">Tab 3</div>
-</div>
+    <div class="tab-content" id="content-1">Content for Tab 1</div>
+    <div class="tab-content" id="content-2">Content for Tab 2</div>
+    <div class="tab-content" id="content-3">Content for Tab 3</div>
 
-<div class="tab-content" id="content-1">Content for Tab 1</div>
-<div class="tab-content" id="content-2">Content for Tab 2</div>
-<div class="tab-content" id="content-3">Content for Tab 3</div>
-
-<script src="tabs.js"></script>
-</body>
+    <script src="tabs.js"></script>
+  </body>
 </html>
